Mit Colab erstellt

--- a/homeexercise1.ipynb
+++ b/homeexercise1.ipynb
@@ -46,9 +46,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2d5ca0f7-4c71-44c8-aef5-4a7819b594d1"
+        "outputId": "ca210ba9-ccd9-41b7-b28d-852c12eea32e"
       },
-      "execution_count": 14,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "stream",
@@ -110,9 +110,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "81fcc4f0-fb2e-4cc5-b6ad-a9bd98458522"
+        "outputId": "dea83bf4-f0ae-47d4-d3f0-2958423fcfa4"
       },
-      "execution_count": 15,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
@@ -206,9 +206,9 @@
       "source": [
         "# Calculate and print the number of unique words in the text\n",
         "\n",
-        "import re  # I import re for being able to use regular expressions\n",
+        "import re  # I import re to be able to use regular expressions\n",
         "\n",
-        "text_as_list = re.split(r'[;:,\\s!.]+', article.text)  # Split the article text by any space, semicolon, colon, comma, or exclamation mark. this creates a new variable \"text_as_list\" and saves the article text as a list in this variable\n",
+        "text_as_list = re.split(r'[;:,\\s!.]+', article.text)  # Split the article text by any space, semicolon, colon, comma, period or exclamation mark. this creates a new variable \"text_as_list\" and saves the article text as a list in this variable\n",
         "text_as_set = set(text_as_list)  # transforming the list into a set to eliminate duplicates\n",
         "\n",
         "print(text_as_set)  # prints all unique words\n",
@@ -226,9 +226,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9811e83a-1c76-4f5d-f9e2-7c7df55bbc44"
+        "outputId": "3d468c3c-5ba6-47b7-8b6b-db32590573d9"
       },
-      "execution_count": 16,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "stream",
@@ -316,9 +316,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "61269139-4ad7-44c9-893a-b9debc52df0d"
+        "outputId": "0cb8dd9d-0ebe-4624-a960-3386b91326d3"
       },
-      "execution_count": 17,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "stream",
@@ -357,7 +357,7 @@
         "# then I load the language model\n",
         "nlp = spacy.load(\"en_core_web_sm\")\n",
         "\n",
-        "# then I have the text processed; specifically the text in all lowercase. This line processes the text and I tokens, lemmas, POS will be accessible.\n",
+        "# then I have the text processed; specifically the text in all lowercase. This line processes the text and its tokens, lemmas, POS will be accessible.\n",
         "doc = nlp(article.text.lower())\n",
         "\n",
         "# Here I initiate a new list:\n",
@@ -380,9 +380,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "M6O0RV6ngKIM",
-        "outputId": "d2a443a6-6161-4478-fae4-1435f319126a"
+        "outputId": "287f3c83-69f6-4ade-ac6a-55169bb017ec"
       },
-      "execution_count": 18,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "stream",
@@ -417,9 +417,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "86b7dd0a-d83b-431d-a5e7-9052e42d19dd"
+        "outputId": "17678a8d-280a-4304-ba45-2ca3e839a887"
       },
-      "execution_count": 19,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
@@ -427,7 +427,7 @@
           "text": [
             "Collecting en-core-web-sm==3.7.1\n",
             "  Downloading https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl (12.8 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m12.8/12.8 MB\u001b[0m \u001b[31m32.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m12.8/12.8 MB\u001b[0m \u001b[31m55.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hRequirement already satisfied: spacy<3.8.0,>=3.7.2 in /usr/local/lib/python3.10/dist-packages (from en-core-web-sm==3.7.1) (3.7.5)\n",
             "Requirement already satisfied: spacy-legacy<3.1.0,>=3.0.11 in /usr/local/lib/python3.10/dist-packages (from spacy<3.8.0,>=3.7.2->en-core-web-sm==3.7.1) (3.0.12)\n",
             "Requirement already satisfied: spacy-loggers<2.0.0,>=1.0.0 in /usr/local/lib/python3.10/dist-packages (from spacy<3.8.0,>=3.7.2->en-core-web-sm==3.7.1) (1.0.5)\n",
@@ -477,7 +477,7 @@
             "'Restart kernel' or 'Restart runtime' option.\n",
             "Collecting en-core-web-lg==3.7.1\n",
             "  Downloading https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.7.1/en_core_web_lg-3.7.1-py3-none-any.whl (587.7 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m587.7/587.7 MB\u001b[0m \u001b[31m754.7 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m587.7/587.7 MB\u001b[0m \u001b[31m799.6 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hRequirement already satisfied: spacy<3.8.0,>=3.7.2 in /usr/local/lib/python3.10/dist-packages (from en-core-web-lg==3.7.1) (3.7.5)\n",
             "Requirement already satisfied: spacy-legacy<3.1.0,>=3.0.11 in /usr/local/lib/python3.10/dist-packages (from spacy<3.8.0,>=3.7.2->en-core-web-lg==3.7.1) (3.0.12)\n",
             "Requirement already satisfied: spacy-loggers<2.0.0,>=1.0.0 in /usr/local/lib/python3.10/dist-packages (from spacy<3.8.0,>=3.7.2->en-core-web-lg==3.7.1) (1.0.5)\n",
@@ -527,7 +527,7 @@
             "'Restart kernel' or 'Restart runtime' option.\n",
             "Collecting en-core-web-trf==3.7.3\n",
             "  Downloading https://github.com/explosion/spacy-models/releases/download/en_core_web_trf-3.7.3/en_core_web_trf-3.7.3-py3-none-any.whl (457.4 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m457.4/457.4 MB\u001b[0m \u001b[31m1.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m457.4/457.4 MB\u001b[0m \u001b[31m756.5 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hRequirement already satisfied: spacy<3.8.0,>=3.7.2 in /usr/local/lib/python3.10/dist-packages (from en-core-web-trf==3.7.3) (3.7.5)\n",
             "Requirement already satisfied: spacy-curated-transformers<0.3.0,>=0.2.0 in /usr/local/lib/python3.10/dist-packages (from en-core-web-trf==3.7.3) (0.2.2)\n",
             "Requirement already satisfied: spacy-legacy<3.1.0,>=3.0.11 in /usr/local/lib/python3.10/dist-packages (from spacy<3.8.0,>=3.7.2->en-core-web-trf==3.7.3) (3.0.12)\n",
@@ -626,9 +626,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NftYBdc8CbJz",
-        "outputId": "6a912a8e-cb50-40ed-8381-be4065ffa244"
+        "outputId": "1da75e25-197a-4f41-d2b7-ad812e691486"
       },
-      "execution_count": 20,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
@@ -736,9 +736,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "285be27d-a862-4db6-fe5a-68cb44a0733a"
+        "outputId": "8d36c30c-1a6e-49c0-c6eb-20ded16bac11"
       },
-      "execution_count": 21,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
@@ -846,9 +846,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b184b894-ad22-4dd3-81fc-26b5019236ed"
+        "outputId": "0d95fdb1-3616-4e7c-d6df-1c4217442a86"
       },
-      "execution_count": 22,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
@@ -954,13 +954,13 @@
       ],
       "metadata": {
         "id": "3CWq0ejhceIH",
-        "outputId": "7d155f67-10d2-4904-ccd9-3d608638b70d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "outputId": "fefe7f60-64fc-4e2d-86de-1ceda9c5a86b"
       },
-      "execution_count": 23,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1394,8 +1394,6 @@
       "source": [
         "#Here I use nlp.trf on the preprocessed version:\n",
         "\n",
-        "nlp_trf = spacy.load(\"en_core_web_trf\")\n",
-        "\n",
         "text_preprocessed = ' '.join(unique_words_after_preprocessing_spaCy)  # Join list items with spaces because the spaCy nlp() function expects a single string as input, not a list!\n",
         "\n",
         "doc = nlp_trf(text_preprocessed)\n",
@@ -1410,12 +1408,12 @@
       ],
       "metadata": {
         "id": "2cxBSOWmc-5x",
-        "outputId": "dc5195ab-d534-431c-d1b1-35871530de1c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "cd17d928-aa49-4f31-ec08-851d3d7d032c"
       },
-      "execution_count": 24,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
@@ -1464,11 +1462,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "When I compare the NER output of (the in my opinion best performing spaCy model) trf on the article after it was preprocessed with the performance on the non-preprocessed article, I can say that the model recognises fewer named entities in the preprocessed article: 34 for the preprocessed article, 76 for the non-preprocessed article. The named entities that the model recognised on the preprocessed text seem to be a lot less accurate; named entities are sometimes split (and added, like in \"three newspaper year\" (?)) incorrectly, and they include quite random words in non-fitting NER types such as \"peel\" in type PERSON.\n",
+        "When I compare the NER output of (the in my opinion best performing spaCy model) trf on the article after it was preprocessed with the performance on the non-preprocessed article, I can say that the model recognises fewer named entities in the preprocessed article: 34 for the preprocessed article, 76 for the non-preprocessed article. The named entities that the model recognised on the preprocessed text seem to be a lot less accurate; named entities are sometimes split incorrectly (and sometimes incorrectly added, like in \"three newspaper year\"), and they include quite random words in non-fitting NER types such as \"peel\" in type PERSON.\n",
         "\n",
-        "It does make sense that the NER performs worse on the preprocessed text because I made all words lowercase and this probably makes it harder for the model to recognise named entities because these is often case-sensitive, e.g. \"Apple\" the company and \"apple\" the fruit. Hence, an important signal for the model is taken away. Moreover, I lemmatised all words which might change entity names in a way that they cannot be recognised anymore. Furthermore, numbers (sometimes important for type MONEY, type DATE, type TIME) are obviously not included in the NER of the preprocessed text because I had previously removed all numbers and punctuation so some date-, money- and time-related information is lost.\n",
+        "It does make sense that the NER performs worse on the preprocessed text because I made all words lowercase and this probably makes it harder for the model to recognise named entities because these is often case-sensitive, e.g. \"Apple\" the company and \"apple\" the fruit. Hence, an important signal for the model is taken away. Moreover, I lemmatised all words which might change entity names in a way that they cannot be recognised anymore. Furthermore, numbers (sometimes important for type MONEY, type DATE, type TIME) are obviously not included in the NER of the preprocessed text because I had previously removed all numbers and punctuation. Therefore, some date-/time- and money-related information is lost.\n",
         "\n",
-        "In conclusion, NER analyses tend to perform better on non-preprocessed texts."
+        "In conclusion, the NER analysis performs considerately better on the non-preprocessed text."
       ],
       "metadata": {
         "id": "PKgkx06j84Jq"
@@ -1499,8 +1497,6 @@
         "# Remember that you first need to load the model by replacing\n",
         "#\"en_core_web_sm\" with the name of your model\n",
         "\n",
-        "import newspaper\n",
-        "from newspaper import Article\n",
         "\n",
         "url = 'https://www.derstandard.at/story/3000000242971/arnold-schwarzenegger-waehlt-kamala-harris'\n",
         "article = Article(url)\n",
@@ -1514,12 +1510,12 @@
       ],
       "metadata": {
         "id": "o3NW0KRYeCPs",
-        "outputId": "26df1969-f108-407d-efe6-2d6277759303",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c90e169a-3881-4c33-90d7-2235e1042b59"
       },
-      "execution_count": 25,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
@@ -1527,7 +1523,7 @@
           "text": [
             "Collecting de-core-news-sm==3.7.0\n",
             "  Downloading https://github.com/explosion/spacy-models/releases/download/de_core_news_sm-3.7.0/de_core_news_sm-3.7.0-py3-none-any.whl (14.6 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m14.6/14.6 MB\u001b[0m \u001b[31m54.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m14.6/14.6 MB\u001b[0m \u001b[31m70.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hRequirement already satisfied: spacy<3.8.0,>=3.7.0 in /usr/local/lib/python3.10/dist-packages (from de-core-news-sm==3.7.0) (3.7.5)\n",
             "Requirement already satisfied: spacy-legacy<3.1.0,>=3.0.11 in /usr/local/lib/python3.10/dist-packages (from spacy<3.8.0,>=3.7.0->de-core-news-sm==3.7.0) (3.0.12)\n",
             "Requirement already satisfied: spacy-loggers<2.0.0,>=1.0.0 in /usr/local/lib/python3.10/dist-packages (from spacy<3.8.0,>=3.7.0->de-core-news-sm==3.7.0) (1.0.5)\n",
@@ -1602,12 +1598,12 @@
       ],
       "metadata": {
         "id": "AeDyii4SeT3-",
-        "outputId": "ede4eae9-2edc-4dde-b11a-b679199b2681",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "1ec4c648-8df9-4125-a7bc-21133328783e"
       },
-      "execution_count": 26,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "stream",
