Mit Colab erstellt

--- a/tutorials/Tutorial3.ipynb
+++ b/tutorials/Tutorial3.ipynb
@@ -212,10 +212,10 @@
       ],
       "metadata": {
         "id": "GTYwFHjuaQbd",
-        "outputId": "cfea0025-ca31-4e17-c734-ac663e533767",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "cfea0025-ca31-4e17-c734-ac663e533767"
       },
       "execution_count": 8,
       "outputs": [
@@ -274,10 +274,10 @@
       ],
       "metadata": {
         "id": "UJE4a2f2aZbq",
-        "outputId": "cee51bc8-6997-4a9c-a71e-dd5f0f1499d3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "cee51bc8-6997-4a9c-a71e-dd5f0f1499d3"
       },
       "execution_count": 11,
       "outputs": [
@@ -324,10 +324,10 @@
       ],
       "metadata": {
         "id": "CuJqctfCadDj",
-        "outputId": "22936e93-2426-4eda-f859-393a0c4cfefd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "22936e93-2426-4eda-f859-393a0c4cfefd"
       },
       "execution_count": 5,
       "outputs": [
@@ -367,7 +367,7 @@
         "data = torch.arange(1, 36, dtype=torch.float32).reshape(5, 7)\n",
         "print(\"Data is:\", data)\n",
         "\n",
-        "# We can perform operations like *sum* over each row...\n",
+        "# We can perform operations like *sum* over each row... matrasses\n",
         "print(\"Taking the sum over rows:\")\n",
         "print(data.sum(dim=1)) #(5,)\n",
         "\n",
@@ -381,10 +381,10 @@
       ],
       "metadata": {
         "id": "VmuIEbsjlopj",
-        "outputId": "03c4bff9-5bfd-4143-aa18-27d3fde78b89",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "03c4bff9-5bfd-4143-aa18-27d3fde78b89"
       },
       "execution_count": 6,
       "outputs": [
@@ -427,16 +427,31 @@
         "# Your code here\n",
         "\n",
         "# create torch.tensor with contents above:\n",
+        "my_first_tensor = torch.tensor([[1, 2.2, 9.6], [4, -7.2, 6.3]])\n",
+        "print(my_first_tensor)\n",
         "\n",
         "# computer average of each row and each column:\n",
         "\n",
         "# shape of results:"
       ],
       "metadata": {
-        "id": "pDdyxJROnKJq"
+        "id": "pDdyxJROnKJq",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "914c9b4d-cc13-4789-cfa1-8115be652b77"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[ 1.0000,  2.2000,  9.6000],\n",
+            "        [ 4.0000, -7.2000,  6.3000]])\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
