Mit Colab erstellt

--- a/tutorials/Tutorial3.ipynb
+++ b/tutorials/Tutorial3.ipynb
@@ -588,34 +588,34 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "id": "-K0JS2yIf9ey",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ecc2d8dc-4c21-482b-9591-b94d345fee72"
+        "outputId": "456bcd5f-4339-4881-be19-6fb532a41340"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2024-11-12 09:17:45--  https://github.com/dgromann/cl_intro_ws2024/raw/main/word2vec_embeddings.bin\n",
+            "--2024-11-12 18:36:14--  https://github.com/dgromann/cl_intro_ws2024/raw/main/word2vec_embeddings.bin\n",
             "Resolving github.com (github.com)... 140.82.113.3\n",
             "Connecting to github.com (github.com)|140.82.113.3|:443... connected.\n",
             "HTTP request sent, awaiting response... 302 Found\n",
             "Location: https://raw.githubusercontent.com/dgromann/cl_intro_ws2024/main/word2vec_embeddings.bin [following]\n",
-            "--2024-11-12 09:17:46--  https://raw.githubusercontent.com/dgromann/cl_intro_ws2024/main/word2vec_embeddings.bin\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.111.133, 185.199.108.133, 185.199.110.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.111.133|:443... connected.\n",
+            "--2024-11-12 18:36:15--  https://raw.githubusercontent.com/dgromann/cl_intro_ws2024/main/word2vec_embeddings.bin\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.109.133, 185.199.108.133, 185.199.110.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.109.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 96769269 (92M) [application/octet-stream]\n",
-            "Saving to: ‘word2vec_embeddings.bin.1’\n",
+            "Saving to: ‘word2vec_embeddings.bin’\n",
             "\n",
-            "word2vec_embeddings 100%[===================>]  92.29M   358MB/s    in 0.3s    \n",
+            "word2vec_embeddings 100%[===================>]  92.29M   274MB/s    in 0.3s    \n",
             "\n",
-            "2024-11-12 09:17:47 (358 MB/s) - ‘word2vec_embeddings.bin.1’ saved [96769269/96769269]\n",
+            "2024-11-12 18:36:15 (274 MB/s) - ‘word2vec_embeddings.bin’ saved [96769269/96769269]\n",
             "\n",
             "Requirement already satisfied: gensim in /usr/local/lib/python3.10/dist-packages (4.3.3)\n",
             "Requirement already satisfied: numpy<2.0,>=1.18.5 in /usr/local/lib/python3.10/dist-packages (from gensim) (1.26.4)\n",
@@ -634,13 +634,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
         "id": "uT3equb6aKNy"
       },
       "outputs": [],
       "source": [
-        "import gensim\n",
+        "import gensim  # a library useful for word embeddings\n",
         "import numpy as np\n",
         "\n",
         "from sklearn.decomposition import PCA\n",
@@ -654,7 +654,7 @@
       "cell_type": "code",
       "source": [
         "# Print the length fo the whole vocabulary\n",
-        "print(\"Length of the vocabulary\",len(model.key_to_index))\n",
+        "print(\"Length of the vocabulary\",len(model.key_to_index))  #this is not a lot for this kind of model!\n",
         "\n",
         "# Print the embedding of a specific word\n",
         "print(\"Embedding for the word good: \", model[\"good\"])"
@@ -664,9 +664,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "79305a9a-4e2c-4aa1-8877-972d522453db"
+        "outputId": "02cc515b-86eb-499a-867e-e7b8b535197a"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -740,13 +740,28 @@
     {
       "cell_type": "code",
       "source": [
-        "#Your code goes here"
+        "#Your code goes here\n",
+        "\n",
+        "dimensions_number = len(model[\"good\"])\n",
+        "print(dimensions_number)"
       ],
       "metadata": {
-        "id": "zJdLUqzamYIv"
+        "id": "zJdLUqzamYIv",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "21f82e8b-7f01-434a-ce48-05938c18ad05"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "300\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -764,11 +779,12 @@
       "source": [
         "print(model.most_similar('good'))\n",
         "\n",
-        "# Get the top 5 most similar words of \"good\"\n",
+        "# Get the top 5 most similar words of \"good\"  -> this is about similar contexts! not equivilents!\n",
         "most_similar = model.most_similar(\"good\", topn=5)\n",
         "print(most_similar)\n",
         "\n",
         "# Your code to get the first word from that list of top 5\n",
+        "print(most_similar[0][0])\n",
         "\n",
         "# Get the word only from the tuple of word + cosine similarity = index of list of tuples + index of tuple\n"
       ],
@@ -777,16 +793,17 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "de291545-8e9e-45a2-b0cd-1302bed6a6de"
+        "outputId": "31dd68cd-3e07-4129-b87c-97d4f00ec525"
       },
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "[('great', 0.7291510105133057), ('bad', 0.7190051078796387), ('terrific', 0.6889115571975708), ('decent', 0.6837348341941833), ('nice', 0.6836092472076416), ('excellent', 0.644292950630188), ('fantastic', 0.6407778263092041), ('better', 0.6120728850364685), ('solid', 0.5806034803390503), ('lousy', 0.576420247554779)]\n",
-            "[('great', 0.7291510105133057), ('bad', 0.7190051078796387), ('terrific', 0.6889115571975708), ('decent', 0.6837348341941833), ('nice', 0.6836092472076416)]\n"
+            "[('great', 0.7291510105133057), ('bad', 0.7190051078796387), ('terrific', 0.6889115571975708), ('decent', 0.6837348341941833), ('nice', 0.6836092472076416)]\n",
+            "great\n"
           ]
         }
       ]
@@ -804,7 +821,7 @@
       "cell_type": "code",
       "source": [
         "# Check whether our embeddings are good at the analogy task\n",
-        "result = model.most_similar(positive=['woman', 'king'], negative=['man'], topn=1)\n",
+        "result = model.most_similar(positive=['woman', 'king'], negative=['man'], topn=1)  # positive means addition + and negative means substraction -\n",
         "print(result)"
       ],
       "metadata": {
@@ -812,9 +829,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3yfGt0BDl4AT",
-        "outputId": "5738752e-193b-492c-b8eb-08e41af4248f"
+        "outputId": "b697a0bd-56df-40b1-cd5e-235e7ed7191a"
       },
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
@@ -839,16 +856,37 @@
       "source": [
         "def analogy(a, b, c):\n",
         "  #Your code goes here\n",
+        "  #a is to b as c is to d\n",
+        "  # a + b = c + d ->\n",
+        "  # man + woman = king + d\n",
+        "  # king + woman - man = d\n",
+        "  d = model.most_similar(positive=[b, c], negative=[a], topn=1)\n",
+        "  return d[0][0]\n",
         "\n",
+        "# Man is to woman as king is to queen\n",
+        "# Vienna is to Austria as Paris is to France\n",
         "\n",
-        "print(analogy(\"France\", \"Paris\", \"Austria\"))\n",
-        "print(analogy(\"good\", \"best\", \"bad\"))"
+        "print(analogy(\"France\", \"Paris\", \"Austria\"))  # capital relation\n",
+        "print(analogy(\"good\", \"best\", \"bad\"))  #grammatical relation (superlatives)"
       ],
       "metadata": {
-        "id": "FINqLoLbnlaB"
+        "id": "FINqLoLbnlaB",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "94667b62-e468-4563-9a03-c4564afda552"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Vienna\n",
+            "worst\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -876,7 +914,7 @@
       "metadata": {
         "id": "k5VAQte-pzGj"
       },
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -895,9 +933,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 524
         },
-        "outputId": "5aa6dfeb-fe32-457c-87be-01cd51d70943"
+        "outputId": "7eeaa90e-d043-4f99-b516-8dda3e9ca6fb"
       },
-      "execution_count": null,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "display_data",
