Mit Colab erstellt

--- a/tutorials/Tutorial3.ipynb
+++ b/tutorials/Tutorial3.ipynb
@@ -496,7 +496,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Tensor that requires gradien = operations are being tracked\n",
+        "# Tensor that requires gradient = operations are being tracked\n",
         "x = torch.ones(2, 2, requires_grad=True)\n",
         "print(x)\n",
         "\n",
@@ -531,9 +531,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aAuIkYtYbIP4",
-        "outputId": "773d5b2b-f649-4d39-c4a0-f304129015e9"
+        "outputId": "227ffc8c-7c18-49e6-9c57-29707b054d5f"
       },
-      "execution_count": 8,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "stream",
@@ -543,7 +543,7 @@
             "        [1., 1.]], requires_grad=True)\n",
             "tensor([[3., 3.],\n",
             "        [3., 3.]], grad_fn=<AddBackward0>)\n",
-            "<AddBackward0 object at 0x78deb5262290>\n",
+            "<AddBackward0 object at 0x78ddde287c10>\n",
             "tensor([[27., 27.],\n",
             "        [27., 27.]], grad_fn=<MulBackward0>) tensor(27., grad_fn=<MeanBackward0>)\n",
             "Gradient of y: \n",
@@ -670,7 +670,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Print the length fo the whole vocabulary\n",
+        "# Print the length of the whole vocabulary\n",
         "print(\"Length of the vocabulary\",len(model.key_to_index))  #this is not a lot for this kind of model!\n",
         "\n",
         "# Print the embedding of a specific word\n",
@@ -1237,10 +1237,10 @@
       ],
       "metadata": {
         "id": "S1dg1EbKeXT4",
-        "outputId": "5cb74827-6e85-463c-a415-89adab68574b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "5cb74827-6e85-463c-a415-89adab68574b"
       },
       "execution_count": 23,
       "outputs": [
@@ -1566,10 +1566,10 @@
       ],
       "metadata": {
         "id": "9RNonYGwh3wp",
-        "outputId": "96e0e6d3-a1ca-43db-dca6-907ff54948f7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "96e0e6d3-a1ca-43db-dca6-907ff54948f7"
       },
       "execution_count": 30,
       "outputs": [
@@ -1609,10 +1609,10 @@
       ],
       "metadata": {
         "id": "ysRE02YkjFdK",
-        "outputId": "d6acba54-39bd-4eaf-bee7-77cec9866185",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "d6acba54-39bd-4eaf-bee7-77cec9866185"
       },
       "execution_count": 31,
       "outputs": [
